kubernetes/komga/tranga/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tranga-api
  namespace: komga
  labels:
    app.kubernetes.io/component: api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: api

  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component:  api
    spec:
      containers:
      - name:  tranga-api
        image:  tranga-api
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort:  6531
          name:  tranga-api
        volumeMounts:
          - name: settings
            mountPath: /usr/share/tranga-api
          - name: data
            mountPath: /Manga
      volumes:
        - name:  settings
          persistentVolumeClaim:
            claimName:  tranga-settings
        - name: data
          persistentVolumeClaim:
            claimName:  data
      restartPolicy: Always
