kubernetes/komga/tranga/front.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tranga-front
  namespace: komga
  labels:
    app.kubernetes.io/component: front
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: front
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: front
    spec:
      containers:
      - name:  tranga-front
        image:  tranga-front
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 500Mi
        ports:
        - containerPort:  80
          name:  tranga-front
      restartPolicy: Always
