kubernetes/komga/tranga/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tranga-api
  namespace: komga
spec:
  selector:
    app.kubernetes.io/name: tranga-api
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: tranga-api
    protocol: TCP
    port: 6531
    targetPort: 6531
