kubernetes/komga/tranga/front.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tranga-front
  namespace: komga
spec:
  selector:
    app.kubernetes.io/component: front
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: tranga-front
    protocol: TCP
    port: 8089
    targetPort: 8089
